--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">nmedia</string>
     <string name="out_string">NMedia!</string>
+    <string name="avatar_place">Place for avatar</string>
+    <string name="show_menu">Show menu</string>
 </resources>
