--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,4 +4,7 @@
     <string name="out_string">НМедиа!</string>
     <string name="avatar_place">Место для аватара</string>
     <string name="show_menu">Показать меню</string>
+    <string name="like_button">Нажмите, если нравится</string>
+    <string name="repost_button">Нажмите, чтобы поделиться</string>
+    <string name="watches">Количество просмотров</string>
 </resources>
