--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,4 +7,5 @@
     <string name="like_button">Нажмите, если нравится</string>
     <string name="repost_button">Нажмите, чтобы поделиться</string>
     <string name="watches">Количество просмотров</string>
+    <string name="remove">Удалить</string>
 </resources>
