--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="like_button">Click to like\dislike</string>
     <string name="repost_button">Click to repost</string>
     <string name="watches">Watches count</string>
+    <string name="remove">Remove</string>
 </resources>
