--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -8,4 +8,7 @@
     <string name="repost_button">Нажмите, чтобы поделиться</string>
     <string name="watches">Количество просмотров</string>
     <string name="remove">Удалить</string>
+    <string name="hint_new_content">Введите текст для нового поста</string>
+    <string name="save_button">Сохранить</string>
+    <string name="empty_content">Заполните контент для поста</string>
 </resources>
