--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="hint_new_content">Enter new post</string>
     <string name="save_button">Click to save</string>
     <string name="empty_content">Please feel content for post</string>
+    <string name="decline_button">Click to discard changes</string>
 </resources>
