CRUD implementation: new interface OnInteractionListener for actions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="repost_button">Click to repost</string>
     <string name="watches">Watches count</string>
     <string name="remove">Remove</string>
+    <string name="edit">Edit</string>
     <string name="hint_new_content">Enter new post</string>
     <string name="save_button">Click to save</string>
     <string name="empty_content">Please feel content for post</string>
