--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -13,4 +13,5 @@
     <string name="save_button">Сохранить</string>
     <string name="empty_content">Заполните контент для поста</string>
     <string name="decline_button">Отменить изменения</string>
+    <string name="video_button">Запустить видео</string>
 </resources>
