--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="save_button">Click to save</string>
     <string name="empty_content">Please feel content for post</string>
     <string name="decline_button">Click to discard changes</string>
+    <string name="video_button">Click to play video</string>
 </resources>
