UI implemented as two fragments with one activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="empty_content">Please feel content for post</string>
     <string name="decline_button">Click to discard changes</string>
     <string name="video_button">Click to play video</string>
+    <string name="chooser_share_post">Share post</string>
 </resources>
