--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -14,4 +14,5 @@
     <string name="empty_content">Заполните контент для поста</string>
     <string name="decline_button">Отменить изменения</string>
     <string name="video_button">Запустить видео</string>
+    <string name="chooser_share_post">Поделиться...</string>
 </resources>
